--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
-    <string name="app_name">Lilac</string>
+    <string name="app_name">Phoenix</string>
+    <string name="string_hint_edittext_search">جستجوی رایگان عکس با وضوح بالا</string>
+    <string name="string_error_loading_results">اتصال اینترنت خود را برسی کنید</string>
+    <string name="string_error_not_find_results">هیچ نتیجه ای برای این جستجو یافت نشد</string>
+    <string name="string_retry_find_results">تلاش مجدد</string>
+    <string name="string_download_images">دانلود</string>
+    <string name="string_wallpaper_images">تنظیم به عنوان تصویر پس زمینه</string>
+    <string name="string_views_images">یازدیدها</string>
+    <string name="string_downloads_images">دانلود ها</string>
+    <string name="string_likes_images">تعداد لایک ها</string>
+    <string name="string_photo_info">اطلاعات عکس</string>
+    <string name="string_photo_location">موقعیت مکانی (محل) عکس</string>
+    <string name="string_camera_info">اطلاعات دوربین</string>
+    <string name="string_title_download_dialog">در حال دانلود ...</string>
+    <string name="string_waiting_download_dialog">لطفا صبر کنید تا دانلود بارگیری شود...</string>
+    <string name="string_alert_success_wallpaper">تصویر پس زمینه با موفقیت اعمال شد</string>
+    <string name="string_alert_success_download">دانلود با موفقیت انجام شد</string>
 </resources>
