[FIX] fix something in strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="string_retry_find_results">تلاش مجدد</string>
     <string name="string_download_images">دانلود</string>
     <string name="string_wallpaper_images">تنظیم به عنوان تصویر پس زمینه</string>
-    <string name="string_views_images">یازدیدها</string>
+    <string name="string_views_images">بازدیدها</string>
     <string name="string_downloads_images">دانلود ها</string>
     <string name="string_likes_images">تعداد لایک ها</string>
     <string name="string_photo_info">اطلاعات عکس</string>
