add network alert dialog and fix something

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="string_waiting_download_dialog">لطفا صبر کنید تا دانلود بارگیری شود...</string>
     <string name="string_alert_success_wallpaper">تصویر پس زمینه با موفقیت اعمال شد</string>
     <string name="string_alert_success_download">دانلود با موفقیت انجام شد</string>
+    <string name="string_alert_network_error">خطای شبکه ، اتصال به اینترنت خود را برسی کنید</string>
     <string name="string_alert_permission">خطا در ساخت مسیر ذخیره فایل</string>
 </resources>
