--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="string_alert_success_download">دانلود با موفقیت انجام شد</string>
     <string name="string_alert_network_error">خطای شبکه ، اتصال به اینترنت خود را برسی کنید</string>
     <string name="string_alert_permission">خطا در ساخت مسیر ذخیره فایل</string>
+    <string name="string_my_download_title">دانلود ها من</string>
+    <string name="string_empty_my_download_alert">تصویری موجود نمی باشد</string>
 </resources>
