--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="string_alert_permission">خطا در ساخت مسیر ذخیره فایل</string>
     <string name="string_my_download_title">دانلود ها من</string>
     <string name="string_empty_my_download_alert">تصویری موجود نمی باشد</string>
+    <string name="string_delete_my_download">حذف تصویر از حافظه</string>
+
 </resources>
