--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="string_title_alert_detail_ok_permission">برای دانلود تصاویر و اشتراک گزاری آنها نیاز به مجور دسترسی به حافظه می باشد . \n لطفا در تنظیمات برنامه مجوز را فعال کنید</string>
     <string name="string_my_download_title">دانلود های من</string>
     <string name="string_my_download_bottom_sheet_title">دانلود های من / تصویر</string>
+    <string name="string_photo_detail_bottom_sheet_title">تصویر</string>
     <string name="string_empty_my_download_alert">تصویری موجود نمی باشد</string>
     <string name="string_delete_my_download">حذف تصویر از حافظه</string>
     <string name="string_btn_cancel">انصراف</string>
