[FEATURE] download service for downloading photos in detail screen and show notification for show progress an done service .

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="string_waiting_download_dialog">لطفا صبر کنید تا دانلود بارگیری شود...</string>
     <string name="string_alert_success_wallpaper">تصویر پس زمینه با موفقیت اعمال شد</string>
     <string name="string_alert_success_download">دانلود با موفقیت انجام شد</string>
+    <string name="string_alert_start_download">در حال دانلود تصویر ...</string>
     <string name="string_alert_network_error">خطای شبکه ، اتصال به اینترنت خود را برسی کنید</string>
     <string name="string_alert_permission">خطا در ساخت مسیر ذخیره فایل</string>
     <string name="string_empty_photo_info">اطلاعاتی توسط عکاس ثبت نشده!</string>
