--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="string_delete_my_download">حذف تصویر از حافظه</string>
     <string name="string_btn_cancel">انصراف</string>
     <string name="string_btn_setting">تنظیمات</string>
+    <string name="string_btn_update">بروز رسانی</string>
     <string name="string_btn_delete">حذف شود</string>
     <string name="string_title_delete_alert">آیا از حذف این عکس اطمینان دارید؟</string>
     <string name="string_title_delete_detail_alert">این عکس از حافظه دستگاه شما حذف خواهد شد</string>
